# ResearchBOT

./: .dockerignore  .env.example  .gitignore  Dockerfile  config.yaml  ecosystem.config.cjs  pyproject.toml
.agent/skills/openspec-apply-change/: SKILL.md
.agent/skills/openspec-archive-change/: SKILL.md
.agent/skills/openspec-explore/: SKILL.md
.agent/skills/openspec-propose/: SKILL.md
.claude/patterns/: api-contract-sync.md
dev/active/frontend-review/: frontend-review-code-review.md
docs/: COORDINATION.md  ISSUES-v1.md  UI-GUIDELINES.md
memory/plans/: 2026-03-15-prd.md  2026-03-16-ui-ux-audit.md
openspec/: config.yaml
openspec/changes/frontend-v2-fixes/: design.md  proposal.md  tasks.md
openspec/changes/web-deployment/: design.md  proposal.md  tasks.md
openspec/specs/paper-database/: spec.md
scripts/: migrate_paperreviewbot.py
src/: config.py  db.py  seed_keywords.py
src/api/: __main__.py  app.py  deps.py  models.py
src/api/routers/: export.py  keywords.py  papers.py  projects.py  search.py
src/llm/: gemini.py
src/search/: __init__.py  arxiv_search.py  crossref.py  google_scholar.py  openalex.py  pubmed.py  semantic_scholar.py
src/services/: dedup_service.py  export_service.py  extraction_service.py  keyword_service.py  paper_service.py  project_service.py  screening_service.py  search_service.py
web/: next.config.ts  package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/components/: app-sidebar.tsx  copy-project-dialog.tsx  extraction-dialog.tsx  filter-panel.tsx  mode-toggle.tsx  paper-card.tsx  (+3 more)
(+39 files in other folders)
